@@ -6,6 +6,7 @@
 #    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
 #    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.
 
+* savrus: Вычищены dynamic tables attributes из статических таблиц, обновлять мастеров через снапшот.
 * shakurov: Восстановлена совместимость "новый мастер - старая нода", сломанная коммитом 3933bd84f9.
 * babenko: Исправлено удаление атрибута внутри транзакции (YT-10192), изменилась семантика, обновлять мастеров через снепшот.
 * savrus: Поменялись проверки прав для доступа к tablet action и tablet cell bundle, обновлять мастеров через снапшот.
